--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.6.0",
+    "@stripe/stripe-js": "^3.0.8",
     "antd": "^5.15.1",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
@@ -23,6 +25,7 @@
     "react-hook-form": "^7.51.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "stripe": "^14.20.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
