--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.51.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "redux-persist": "^6.0.0",
     "stripe": "^14.20.0",
     "zod": "^3.22.4"
   },
