--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
+    "firebase": "^10.9.0",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
