--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@preline/overlay": "^2.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.6.0",
     "@stripe/stripe-js": "^3.0.8",
