--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "stripe": "^14.20.0",
     "zod": "^3.22.4"
@@ -38,6 +39,7 @@
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-transition-group": "^4.4.10",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
