--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^5.15.19",
     "@preline/overlay": "^2.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.6.0",
@@ -20,6 +23,7 @@
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
     "firebase": "^10.9.0",
+    "flowbite": "^2.3.0",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
