--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs-plugin-utc": "^0.1.2",
     "firebase": "^10.9.0",
     "flowbite": "^2.3.0",
+    "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
