--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-international-phone": "^4.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "react-transition-group": "^4.4.5",
