--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^5.15.19",
     "@preline/overlay": "^2.0.2",
     "@reduxjs/toolkit": "^2.2.1",
