--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.9.0",
     "flowbite": "^2.3.0",
     "framer-motion": "^11.5.4",
+    "i18next": "^25.1.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
@@ -34,6 +35,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.0.1",
     "react-international-phone": "^4.3.0",
     "react-redux": "^9.1.0",
