--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "start": "vite preview --mode production"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.3.4",
-    "@material-tailwind/react": "^2.1.10",
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.17.1",
     "@preline/overlay": "^2.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.6.0",
@@ -28,6 +27,7 @@
     "framer-motion": "^11.5.4",
     "i18next": "^25.1.1",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.513.0",
     "moment": "^2.30.1",
     "preline": "^2.0.3",
     "react": "^18.2.0",
